Fix jumping and clipping issues during loading

--- a/src/assets/stylesheets/avatar-editor.scss
+++ b/src/assets/stylesheets/avatar-editor.scss
@@ -145,7 +145,6 @@
       .item {
         box-sizing: border-box;
         border-radius: 15px;
-        padding: 5px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -154,6 +153,7 @@
         cursor: pointer;
         margin-bottom: 5px;
         width: calc(1 / 3 * 100% - (1 - 1 / 3) * 10px);
+        position: relative;
 
         &.selected{
           background: #eaeaea;
@@ -163,7 +163,11 @@
           height: 40px;
         }
         img {
-          width: 100%;
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          width: calc(100% - 10px);
+          height: calc(100% - 10px);
         }
       }
     }
@@ -234,7 +238,6 @@
   canvas {
     width: 100%;
     height: 100%;
-    border-radius: 20px;
   }
 
   .delete-avatar {
