--- a/src/assets/stylesheets/avatar-preview.scss
+++ b/src/assets/stylesheets/avatar-preview.scss
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   background: #eaeaea;
+  border-radius: 20px;
 
   .loader {
     position: absolute;
